fix spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -29,14 +29,6 @@ a {
   z-index: 1000;
 }
 
-.navbar {
-  width: 100%;
-  position: fixed !important;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 0 15%;
-}
 .nav-link {
   margin: 0 15px;
 }
@@ -73,7 +65,7 @@ a {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 80%;
+  height: 70%;
 }
 
 .hero-content .hero-content-container {
@@ -496,6 +488,7 @@ a {
   max-width: 1220px;
   position: relative; /* Space for pagination */
   overflow: hidden;
+  padding-bottom: 280px;
 }
 
 .swiper-slide {
@@ -504,12 +497,12 @@ a {
   align-items: center;
   text-align: center;
 }
-
+.swiper-pagination {
+  display: none;
+}
 .swiper-button-next,
 .swiper-button-prev {
   color: var(--bg-color) !important; /* Change color */
-  width: 40px;
-  height: 40px;
 }
 /* Position prev button */
 .swiper-button-prev {
@@ -524,7 +517,7 @@ a {
 /* Adjust pagination */
 .swiper-pagination {
   position: absolute;
-  bottom: 20px !important; /* Move it higher if needed */
+  bottom: 0; /* Move it higher if needed */
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
@@ -542,7 +535,7 @@ a {
 }
 
 /* Hide navigation when screen is bigger than 1220px */
-@media (min-width: 1221px) {
+@media (min-width: 1220px) {
   .swiper-container {
     overflow: hidden;
     display: flex;
@@ -561,13 +554,99 @@ a {
 @media (max-width: 1200px) {
   .navbar-collapse {
     background: var(--bg-color) !important;
-    position: absolute !important;
-    top: 60px;
-    left: 0;
-    width: 100%;
-    padding: 20px;
   }
 
+  .nav-link {
+    color: #fff !important;
+  }
+
+  .hero-text {
+    text-align: center;
+  }
+  .hero-text .first-text {
+    font-size: 42px !important;
+    text-align: center;
+  }
+  .hero-text .second-text {
+    font-size: 32px !important;
+    width: 100% !important;
+  }
+
+  .hero-img {
+    display: none;
+  }
+
+  /* Services */
+
+  .services-text h1 {
+    font-size: 24px !important;
+    margin-top: 120px !important;
+  }
+
+  .services-text .description {
+    font-size: 14px !important;
+  }
+
+  .services-offers .offers-card {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .services-offers .offers-card2 {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .services-offers .offers-card3 {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .reasons_card .reason-img img {
+    width: 60px;
+  }
+
+  .reasons_text h1 {
+    font-size: 32px !important;
+  }
+
+  .reasons-btn {
+    margin-top: -30px !important;
+  }
+
+  .reasons .reasons-btn a {
+    text-decoration: none;
+    padding: 10px 60px;
+    background: var(--bg-color);
+    color: #fff;
+    border-radius: 8px;
+    text-transform: uppercase;
+    font-weight: 600;
+  }
+
+  .footer-content1 {
+    flex-direction: column;
+  }
+
+  .footer-content1 .footer-logo img {
+    width: 400px; /* Adjust width as needed */
+    max-width: 100%; /* Makes it responsive */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Perfect centering */
+    z-index: -2;
+  }
+
+  .footer-content2 {
+    flex-direction: column;
+  }
+
+  .footer-content2 .links {
+    gap: 20px;
+    flex-direction: column;
+    align-items: start;
+  }
+}
+@media (max-width: 768px) {
   .nav-link {
     color: #fff !important;
   }
